fix media mention and press release text-alignment issue

--- a/frontend/app/styles/_typography.scss
+++ b/frontend/app/styles/_typography.scss
@@ -372,6 +372,7 @@ hr.separator {
 
   .article-headline, .article-subheadline {
     @extend .alrightsanslight;
+    margin:0;
     margin-bottom: 5px;
   }
   .article-date {
@@ -380,6 +381,17 @@ hr.separator {
     text-transform: uppercase;
     margin: 0;
     font-size: .875em;
+  }
+
+  .text-container {
+    .article-headline, .article-subheadline, .article-date {
+      margin:0 auto;
+      max-width: 1088px;
+    }
+
+    .article-headline, .article-subheadline {
+      margin-bottom:5px;
+    }
   }
 }
 
